--- a/LIT.Smabu/Client/Pages/Customer/CustomerOverview.razor
+++ b/LIT.Smabu/Client/Pages/Customer/CustomerOverview.razor
@@ -2,6 +2,7 @@
 @using LIT.Smabu.Shared.Dtos;
 @using Microsoft.AspNetCore.Authorization;
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication;
+using LIT.Smabu.Shared.Domain.Dtos;
 @inject HttpClient Http
 @attribute [Authorize]
 
