--- a/LIT.Smabu/Client/Pages/Customer/CustomerOverview.razor
+++ b/LIT.Smabu/Client/Pages/Customer/CustomerOverview.razor
@@ -1,4 +1,5 @@
 ﻿@page "/customers"
+@using LIT.Smabu.Shared.Commands;
 @using LIT.Smabu.Shared.Dtos;
 @using Microsoft.AspNetCore.Authorization;
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication;
@@ -7,6 +8,7 @@
 
 <PageTitle>Kunden</PageTitle>
 <h3>Kunden</h3>
+<input type="button" @onclick="CreateNewAsync" />
 
 @if (customers == null)
 {
@@ -54,5 +56,12 @@ else
         {
             exception.Redirect();
         }
+    }
+
+    public async Task CreateNewAsync()
+    {
+        var postBody = new CreateCustomer("Name 1", "Name2");
+        using var response = await Http.PostAsJsonAsync("customers", postBody);
+        var customer = await response.Content.ReadFromJsonAsync<CustomerOverviewDto>();
     }
 }
