--- a/LIT.Smabu/Client/Pages/Customer/Create.razor
+++ b/LIT.Smabu/Client/Pages/Customer/Create.razor
@@ -1,12 +1,11 @@
-﻿@page "/customers/{Id:guid}"
-@using LIT.Smabu.Shared.Commands;
-@using LIT.Smabu.Shared.Dtos;
+﻿@page "/customers/create"
+@using LIT.Smabu.Shared.Commands.Customer;
 @using Microsoft.AspNetCore.Authorization;
 @inject HttpClient Http
 @attribute [Authorize]
 
-<PageTitle>Kunde</PageTitle>
-<h3>Kunde</h3>
+<PageTitle>Erstelle Kunde</PageTitle>
+<h3>Erstelle Kunde</h3>
 
 <EditForm Model="@Model" OnValidSubmit="@SubmitAsync">
     <div class="row">
@@ -23,29 +22,22 @@
     </div>  
     <div class="form-group">
         <button type="submit" class="btn btn-primary">Save</button>
-        <button class="btn btn-light" @onclick="Back">Cancel</button>
+        <button class="btn btn-light" @onclick="Cancel">Cancel</button>
     </div>
 </EditForm>
 
 @code {
     @inject NavigationManager NavigationManager;
 
-    [Parameter]
-    public Guid Id { get; set; }
-    public CustomerDetailDto Model { get; set; }
-
-    protected override async Task OnInitializedAsync()
-    {
-        Model = await Http.GetFromJsonAsync<CustomerDetailDto>("customers/" + Id);
-    }
+    public CreateCustomer Model { get; } = new() { Name1 = "", Name2 = "" };
 
     private async Task SubmitAsync()
     {
-        //using var response = await Http.PostAsJsonAsync("customers", Model);
+        using var response = await Http.PostAsJsonAsync("customers", Model);
         NavigationManager.NavigateTo("/customers");
     }
 
-    public void Back()
+    public void Cancel()
     {
         NavigationManager.NavigateTo("/customers");
     }
