--- a/LIT.Smabu/Client/Shared/NavMenu.razor
+++ b/LIT.Smabu/Client/Shared/NavMenu.razor
@@ -11,12 +11,32 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <span class="oi oi-home" aria-hidden="true"></span>Übersicht
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="customers">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Kunden
+                <span class="oi oi-people" aria-hidden="true"></span>Kunden
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="products">
+                <span class="oi oi-cart" aria-hidden="true"></span>Produkte
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="offers">
+                <span class="oi oi-briefcase" aria-hidden="true"></span>Angebote
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="invoices">
+                <span class="oi oi-dollar" aria-hidden="true"></span>Rechnungen
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="termsofpayment">
+                <span class="oi oi-pencil" aria-hidden="true"></span>Zahlungsbedingungen
             </NavLink>
         </div>
     </nav>
