--- a/LIT.Smabu/Client/Shared/PageHeader.razor
+++ b/LIT.Smabu/Client/Shared/PageHeader.razor
@@ -1,6 +1,6 @@
 ﻿
 <PageTitle>@PageTitle</PageTitle>
-<div class="container-fluid">
+<div class="container-fluid" style="margin-bottom:25px;">
     <div class="row">
         <div class="col-sm-12 col-md" style="padding:0">
             <h4 style="font-weight:bold; margin:0; padding:0;">@PageTitle</h4>
