TempImport implementiert; InvoiceService, Address erweitert.

--- a/LIT.Smabu/Client/Pages/Customer/Create.razor
+++ b/LIT.Smabu/Client/Pages/Customer/Create.razor
@@ -11,14 +11,9 @@
 <EditForm Model="@Model" OnValidSubmit="@SubmitAsync">
     <div class="row">
         <div class="col-md-6">
-            <label for="Name1" class="form-label">Name</label>
-            <InputText class="form-control" @bind-Value="Model.Name1" />
-            <ValidationMessage For="@(() => Model.Name1)" />
-        </div>
-        <div class="col-md-6">
-            <label for="Name2" class="form-label">Name 2</label>
-            <InputText class="form-control" @bind-Value="Model.Name2" />
-            <ValidationMessage For="@(() => Model.Name2)" />
+            <label for="Name" class="form-label">Name</label>
+            <InputText class="form-control" @bind-Value="Model.Name" />
+            <ValidationMessage For="@(() => Model.Name)" />
         </div>
     </div>  
     <FormFooter BackUrl="/customers">
@@ -31,7 +26,7 @@
 @code {
     @inject NavigationManager NavigationManager;
 
-    public CreateCustomer Model { get; } = new() { Name1 = "", Name2 = "" };
+    public CreateCustomer Model { get; } = new() { Name = "" };
 
     private async Task SubmitAsync()
     {
