--- a/LIT.Smabu/Client/Pages/Index.razor
+++ b/LIT.Smabu/Client/Pages/Index.razor
@@ -1,4 +1,5 @@
-﻿@page "/"
+﻿@inject HttpClient Http
+@page "/"
 
 <PageTitle>Index</PageTitle>
 
@@ -7,3 +8,12 @@
 Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+
+
+@code {
+ 
+    protected override async Task OnInitializedAsync()
+    {
+        var customer = await Http.PostAsync("home/import", null) ?? throw new Exception("NotFound");
+    }
+}
