Commands/Queries-Struktur

--- a/LIT.Smabu/Client/Pages/Customer/Edit.razor
+++ b/LIT.Smabu/Client/Pages/Customer/Edit.razor
@@ -1,5 +1,6 @@
 ﻿@page "/customers/{Id:guid}"
-@using LIT.Smabu.Shared.Customers;
+@using LIT.Smabu.Shared.Domain.CustomerAggregate.Commands;
+@using LIT.Smabu.Shared.Domain.CustomerAggregate.Queries;
 @using Microsoft.AspNetCore.Authorization;
 @inject HttpClient Http
 @attribute [Authorize]
@@ -31,11 +32,11 @@
 
     [Parameter]
     public Guid Id { get; set; }
-    public EditCustomerRequest Model { get; set; }
+    public EditCustomerCommand Model { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
-        var customer = await Http.GetFromJsonAsync<CustomerDetailDto>("customers/" + Id) ?? throw new Exception("NotFound");
+        var customer = await Http.GetFromJsonAsync<GetCustomerDetailResponse>("customers/" + Id) ?? throw new Exception("NotFound");
         this.Model = new()
         {
             Id = customer.Id,
