--- a/LIT.Smabu/Client/Pages/Customer/Create.razor
+++ b/LIT.Smabu/Client/Pages/Customer/Create.razor
@@ -1,5 +1,5 @@
 ﻿@page "/customers/create"
-@using LIT.Smabu.Shared.Customers;
+@using LIT.Smabu.Shared.Domain.CustomerAggregate.Commands;
 @using Microsoft.AspNetCore.Authorization;
 @inject HttpClient Http
 @attribute [Authorize]
@@ -26,7 +26,7 @@
 @code {
     @inject NavigationManager NavigationManager;
 
-    public CreateCustomerRequest Model { get; } = new() { Name = "" };
+    public CreateCustomerCommand Model { get; } = new() { Name = "" };
 
     private async Task SubmitAsync()
     {
