--- a/LIT.Smabu/Client/Pages/Customer/Create.razor
+++ b/LIT.Smabu/Client/Pages/Customer/Create.razor
@@ -1,5 +1,5 @@
 ﻿@page "/customers/create"
-@using LIT.Smabu.Shared.Domain.CustomerAggregate.Commands;
+@using LIT.Smabu.Shared.Domain.Customers.Commands;
 @using Microsoft.AspNetCore.Authorization;
 @inject HttpClient Http
 @attribute [Authorize]
