--- a/LIT.Smabu/Client/Pages/Customer/Edit.razor
+++ b/LIT.Smabu/Client/Pages/Customer/Edit.razor
@@ -1,6 +1,6 @@
 ﻿@page "/customers/{Id:guid}"
-@using LIT.Smabu.Shared.Domain.CustomerAggregate.Commands;
-@using LIT.Smabu.Shared.Domain.CustomerAggregate.Queries;
+@using LIT.Smabu.Shared.Domain.Customers.Commands;
+@using LIT.Smabu.Shared.Domain.Customers.Queries;
 @using Microsoft.AspNetCore.Authorization;
 @inject HttpClient Http
 @attribute [Authorize]
