--- a/LIT.Smabu/Client/Pages/Customer/Overview.razor
+++ b/LIT.Smabu/Client/Pages/Customer/Overview.razor
@@ -1,5 +1,5 @@
 ﻿@page "/customers"
-@using LIT.Smabu.Shared.Domain.CustomerAggregate.Queries;
+@using LIT.Smabu.Shared.Domain.Customers.Queries;
 @using Microsoft.AspNetCore.Authorization;
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication;
 @inject HttpClient Http
