--- a/LIT.Smabu/Client/Pages/Customer/Overview.razor
+++ b/LIT.Smabu/Client/Pages/Customer/Overview.razor
@@ -57,7 +57,7 @@ else
     {
         try
         {
-            customers = await Http.GetFromJsonAsync<GetAllCustomersResponse[]>("customers");
+            customers = await Http.GetFromJsonAsync<GetAllCustomersResponse[]>("Customers");
         }
         catch (AccessTokenNotAvailableException exception)
         {
