--- a/LIT.Smabu/Client/Pages/Invoice/Overview.razor
+++ b/LIT.Smabu/Client/Pages/Invoice/Overview.razor
@@ -1,7 +1,7 @@
 ﻿@page "/invoices"
-@using LIT.Smabu.Shared.Domain.Customers.Queries;
+@using LIT.Smabu.Domain.Shared.Invoices.Queries;
 @using Microsoft.AspNetCore.Authorization;
-@using Microsoft.AspNetCore.Components.WebAssembly.Authentication;
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication; 
 @inject HttpClient Http
 @attribute [Authorize]
 
