--- a/LIT.Smabu/Client/Pages/Customer/Create.razor
+++ b/LIT.Smabu/Client/Pages/Customer/Create.razor
@@ -1,5 +1,6 @@
 ﻿@page "/customers/create"
-@using LIT.Smabu.Shared.Domain.Customers.Commands;
+@using LIT.Smabu.Domain.Shared.Customers.Commands;
+@using LIT.Smabu.Domain.Shared.Customers;
 @using Microsoft.AspNetCore.Authorization;
 @inject HttpClient Http
 @attribute [Authorize]
@@ -28,7 +29,7 @@
 
     public CreateCustomerCommand Model { get; } = new()
     { 
-        Id = new Smabu.Shared.Domain.Customers.CustomerId(Guid.NewGuid()),
+        Id = new CustomerId(Guid.NewGuid()),
         Name = ""
     };
 
