--- a/LIT.Smabu/Client/Pages/Invoice/Overview.razor
+++ b/LIT.Smabu/Client/Pages/Invoice/Overview.razor
@@ -1,5 +1,5 @@
 ﻿@page "/invoices"
-@using LIT.Smabu.Domain.Shared.Invoices.Queries;
+@using LIT.Smabu.Shared.Invoices;
 @using Microsoft.AspNetCore.Authorization;
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication; 
 @inject HttpClient Http
@@ -35,7 +35,7 @@ else if (invoices.Any())
                     <td>@invoice.Number.ToLongString()</td>
                     <td>@invoice.FiscalYear</td>
                     <td>@invoice.CustomerName</td>
-                    <td>@invoice.Performance.To.ToShortDateString()</td>
+                    <td>@invoice.PerformancePeriod.To.ToShortDateString()</td>
                     <td style="text-align: right">@invoice.Currency.Format(invoice.Amount)</td>
                     <td class="btn-group btn-group-sm">
    @*                      <a class="btn btn-sm oi oi-pencil" title="Öffnen" href="@($"/customers/{customer.Id}")"></a>
@@ -53,13 +53,13 @@ else
 
 @code {
     @inject NavigationManager NavigationManager;
-    private GetAllInvoicesResponse[]? invoices;
+    private InvoiceDTO[]? invoices;
 
     protected override async Task OnInitializedAsync()
     {
         try
         {
-            invoices = await Http.GetFromJsonAsync<GetAllInvoicesResponse[]>("Invoices");
+            invoices = await Http.GetFromJsonAsync<InvoiceDTO[]>("Invoices");
         }
         catch (AccessTokenNotAvailableException exception)
         {
