InvoiceLines-Mapper added

--- a/LIT.Smabu/Client/Pages/Customer/Edit.razor
+++ b/LIT.Smabu/Client/Pages/Customer/Edit.razor
@@ -20,7 +20,7 @@
                 <ValidationMessage For="@(() => Model.Name)" />
             </div>
             <div class="col-md-6">
-                <label for="IndustryBranch" class="form-label">Name</label>
+                <label for="IndustryBranch" class="form-label">Branche</label>
                 <InputText class="form-control" @bind-Value="Model.IndustryBranch" />
                 <ValidationMessage For="@(() => Model.IndustryBranch)" />
             </div>
