--- a/LIT.Smabu/Client/Shared/LoginDisplay.razor
+++ b/LIT.Smabu/Client/Shared/LoginDisplay.razor
@@ -4,15 +4,16 @@
 
 <AuthorizeView>
     <Authorized>
-        Hello, @context.User.Identity?.Name!
-        <button class="nav-link btn btn-link" @onclick="BeginLogOut">Log out</button>
+        @* <MudText>Hello, @context.User.Identity?.Name!</MudText> *@
+        <MudButton Size="Size.Small" @onclick="BeginLogOut">Log out</MudButton>
+        <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />
     </Authorized>
     <NotAuthorized>
-        <a href="authentication/login">Log in</a>
+        <a class="" href="authentication/login">Log in</a>
     </NotAuthorized>
 </AuthorizeView>
 
-@code{
+@code {
     public void BeginLogOut()
     {
         Navigation.NavigateToLogout("authentication/logout");
