--- a/LIT.Smabu/Client/Shared/NavMenu.razor
+++ b/LIT.Smabu/Client/Shared/NavMenu.razor
@@ -1,54 +1,10 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">LIT.Smabu</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </div>
-</div>
-
-<div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span>Übersicht
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="customers">
-                <span class="oi oi-people" aria-hidden="true"></span>Kunden
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="products">
-                <span class="oi oi-cart" aria-hidden="true"></span>Produkte
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="offers">
-                <span class="oi oi-briefcase" aria-hidden="true"></span>Angebote
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="invoices">
-                <span class="oi oi-dollar" aria-hidden="true"></span>Rechnungen
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="termsofpayment">
-                <span class="oi oi-pencil" aria-hidden="true"></span>Zahlungsbedingungen
-            </NavLink>
-        </div>
-    </nav>
-</div>
-
-@code {
-    private bool collapseNavMenu = true;
-
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
-    }
-}
+﻿<MudNavMenu Dense="true" Bordered="true" Margin="Margin.Dense">
+    <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Dashboard">Dashboard</MudNavLink>
+    <MudNavGroup Title="Kunden" Expanded="true" HideExpandIcon="true" Icon="@Icons.Material.Filled.People">
+        <MudNavLink Href="/customers" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.ViewList">Übersicht</MudNavLink>
+        <MudNavLink Href="/offers" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.LocalOffer">Angebote</MudNavLink>
+        <MudNavLink Href="/invoices" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Money">Rechnungen</MudNavLink>
+    </MudNavGroup>
+    <MudNavLink Href="/products" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Label">Produkte</MudNavLink>
+    <MudNavLink Href="/termsofpayment" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Payment">Zahlungsbedingungen</MudNavLink>
+</MudNavMenu>
